@@ -47,6 +47,9 @@ joffe via mahadev)
   ZOOKEEPER-248.  QuorumPeer should use Map interface instead of 
 HashMap implementation. (nitay joffe via mahadev)
 
+  ZOOKEEPER-241. Build of a distro fails after clean target is run. (patrick
+hunt via mahadev)
+
 IMPROVEMENTS:
    
    ZOOKEEPER-64. Log system env information when initializing server and
